dhall/tests/type-inference/failure/unit/IfBranchesNotTermTypeOrKind.txt
Type error: error: IfBranchMustBeTermTypeOrKind
 --> <current file>:1:1
  |
1 | if True then Kind else Kind
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ IfBranchMustBeTermTypeOrKind
  |
